--- a/index.html
+++ b/index.html
@@ -6,31 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Rock, Paper, Scissors</title>
-  <style>
-    body {
-      margin: 0;
-      background: #FEE834;
-      text-align: center;
-      font-family:  "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    }
-
-    button {
-      font-size: 1.2rem;
-      border: 0.25rem solid black;
-      padding: 0.5rem;
-      margin: 1rem 0.5rem;
-    }
-
-    .game-buttons {
-      display: none;
-    }
-
-    .output {
-      font-size: 2rem;
-      font-weight: bold;
-      line-height: 2rem;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
